--- a/person.html
+++ b/person.html
@@ -7,7 +7,7 @@
 	<body>
 		<div style="font-family: 'Courier New', Courier, monospace;">
 			<h1>Hello,world</h1>
-			<h4>This is my first web</h4>
+			<h4>This is my first website</h4>
 		</div>
 	</body>
 </html>
