--- a/person.html
+++ b/person.html
@@ -3,11 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
+		<link rel="stylesheet" href="css/new.css" />
 	</head>
 	<body>
-		<div style="font-family: 'Courier New', Courier, monospace;">
+		<img class="touxiang" src="img/头像.JPG" alt="头像" />
+		<div class="text-area">
 			<h1>Hello,world</h1>
-			<h4>This is my first website</h4>
+			<h4>This is my first web</h4>
 		</div>
 	</body>
 </html>
