--- a/person.html
+++ b/person.html
@@ -8,8 +8,8 @@
 	<body>
 		<img class="touxiang" src="img/头像.JPG" alt="头像" />
 		<div class="text-area">
-			<h1>Hello,world</h1>
-			<h4>This is my first web</h4>
+			<h1>Hello,world!</h1>
+			<h3>This is my first bio page</h3>
 		</div>
 	</body>
 </html>
