--- a/person.html
+++ b/person.html
@@ -10,7 +10,7 @@
 		<div class="text-area">
 			<h1>Hello,world!</h1>
 			<h3>This is my first bio page</h3>
-			<h6>Welcome to my personal introduction page! I'm Yao Shenyi, a nobody from Zhejiang Vocational College of Economics and Business, I will continue to update this page.</h6>
+			<h6>Welcome to my personal introduction page, I am Yao Shenyi, a nobody from Zhejiang Vocational College of Economics and Trade, I will continue to update this page.</h6>
 		</div>
 	</body>
 </html>
