--- a/person.html
+++ b/person.html
@@ -5,12 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>姚沈峄</title>
 		<link rel="stylesheet" href="css/new.css" />
+		<!-- favicon图标 -->
+		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+		<link rel="manifest" href="./site.webmanifest">
 	</head>
 	<body>
 		<div class="container">
 			<!-- 头像和标题 -->
 			<header>
-				<img src="img/头像.JPG" alt="Your Avatar" class="avatar" />
+				<img src="img/头像.JPG" alt="avatar" class="avatar" />
 				<h1>姚沈峄</h1>
 				<p>Student</p>
 			</header>
